<resources>
    <string name="app_name">What the dog doin</string>
    <string name="dogs">Chiens</string>
    <string name="breeds">Races</string>
    <string name="home">Accueil</string>
    <string name="diseases">Maladies</string>
    <string name="clients">Clients</string>

    <string-array name="breeds_sort">
        <item>Nom</item>
        <item>Catégorie</item>
        <item>Morphologie</item>
        <item>Taille moyenne</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>