<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dogs"
        android:icon="@drawable/ic_baseline_pets_24"
        android:title="@string/dogs" />

    <item
        android:id="@+id/navigation_breeds"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/breeds" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_diseases"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/diseases" />
    <item
        android:id="@+id/navigation_clients"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/clients" />

</menu>