<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.whatthedogdoin.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dogs"
        android:name="com.example.whatthedogdoin.ui.dogs.DogsFragment"
        android:label="@string/dogs"
        tools:layout="@layout/fragment_dogs" />

    <fragment
        android:id="@+id/navigation_races"
        android:name="com.example.whatthedogdoin.ui.races.RacesFragment"
        android:label="@string/races"
        tools:layout="@layout/fragment_races" />
    <fragment
        android:id="@+id/navigation_diseases"
        android:name="com.example.whatthedogdoin.ui.races.RacesFragment"
        android:label="@string/diseases"
        tools:layout="@layout/fragment_races" />
    <fragment
        android:id="@+id/navigation_clients"
        android:name="com.example.whatthedogdoin.ui.races.RacesFragment"
        android:label="@string/clients"
        tools:layout="@layout/fragment_races" />
</navigation>